tests/Rules/Media/Fixtures/invalid/object_no_alt.html.twig
{# 1 errors #}
<object data="file.swf"></object>
